[gd_scene load_steps=23 format=2]

[ext_resource path="res://EntityBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://EnemyBase.gd" type="Script" id=2]
[ext_resource path="res://assets/Fonts/swansea-font/Swansea-q3pd.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/FX/Player Caused FX/Slash FX #1/FXSlash1_09.png" type="Texture" id=46]
[ext_resource path="res://assets/FX/Player Caused FX/Slash FX #1/FXSlash1_08.png" type="Texture" id=48]
[ext_resource path="res://assets/FX/Player Caused FX/Slash FX #1/FXSlash1_06.png" type="Texture" id=49]
[ext_resource path="res://assets/FX/Player Caused FX/Slash FX #1/FXSlash1_10.png" type="Texture" id=50]
[ext_resource path="res://assets/FX/Player Caused FX/Slash FX #1/FXSlash1_05.png" type="Texture" id=51]
[ext_resource path="res://assets/FX/Player Caused FX/Slash FX #1/FXSlash1_07.png" type="Texture" id=52]
[ext_resource path="res://assets/FX/Player Caused FX/Slash FX #1/FXSlash1_03.png" type="Texture" id=53]
[ext_resource path="res://assets/FX/Player Caused FX/Slash FX #1/FXSlash1_11.png" type="Texture" id=54]
[ext_resource path="res://assets/FX/Player Caused FX/Slash FX #1/FXSlash1_04.png" type="Texture" id=56]

[sub_resource type="SpriteFrames" id=1]
resource_local_to_scene = true
animations = [  ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 185.0
height = 168.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 53.0
height = 224.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 53 ), ExtResource( 56 ), ExtResource( 51 ), ExtResource( 49 ), ExtResource( 52 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 50 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 56 ), ExtResource( 51 ), ExtResource( 49 ), ExtResource( 52 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 50 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 56 ), ExtResource( 51 ), ExtResource( 49 ), ExtResource( 52 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 50 ), ExtResource( 54 ) ],
"loop": false,
"name": "P_SlashSpecial#2",
"speed": 24.0
}, {
"frames": [  ],
"loop": true,
"name": "blankAnim",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform int pixel_size : hint_range(1, 100) = 1;

void fragment(){
	vec2 pos = UV / TEXTURE_PIXEL_SIZE;
	vec2 square = vec2(float(pixel_size), float(pixel_size));
	vec2 top_left = floor(pos / square) * square;
	vec4 total = vec4(0., 0., 0., 0.);
	for (int x = int(top_left.x); x < int(top_left.x) + pixel_size; x++){
		for (int y = int(top_left.y); y < int(top_left.y) + pixel_size; y++){
			total += texture(TEXTURE, vec2(float(x), float(y)) * TEXTURE_PIXEL_SIZE);
		}
	}
	COLOR = total / float(pixel_size * pixel_size);
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/pixel_size = 40

[sub_resource type="StreamTexture" id=6]
flags = 4
load_path = "res://.import/20210716_0016482.jpg-ed2e8f8c353855cab1d7382520e72a26.stex"

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform int pixel_size : hint_range(1, 100) = 1;

void fragment(){
	vec2 pos = UV / TEXTURE_PIXEL_SIZE;
	vec2 square = vec2(float(pixel_size), float(pixel_size));
	vec2 top_left = floor(pos / square) * square;
	vec4 total = vec4(0., 0., 0., 0.);
	for (int x = int(top_left.x); x < int(top_left.x) + pixel_size; x++){
		for (int y = int(top_left.y); y < int(top_left.y) + pixel_size; y++){
			total += texture(TEXTURE, vec2(float(x), float(y)) * TEXTURE_PIXEL_SIZE);
		}
	}
	COLOR = total / float(pixel_size * pixel_size);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/pixel_size = 40

[node name="EnemyBase" instance=ExtResource( 1 )]
position = Vector2( 1447, 467 )
z_index = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
z_index = 3

[node name="AnimatedSprite" parent="." index="1"]
z_index = 3
frames = SubResource( 1 )

[node name="Hitbox" parent="." index="2"]
collision_layer = 20
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -86, -18 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." index="3"]
collision_layer = 4
collision_mask = 8
monitorable = true

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -2, -12 )
shape = SubResource( 3 )

[node name="dmg_reaction_timer" type="Timer" parent="." index="4"]
wait_time = 0.35

[node name="atk_cooldown_timer" type="Timer" parent="." index="5"]

[node name="hp_bar_timer" type="Timer" parent="." index="6"]
wait_time = 1.5

[node name="dieParticles" type="CPUParticles2D" parent="." index="7"]
position = Vector2( -4, -48 )
scale = Vector2( -0.860172, 1.02899 )
emitting = false
amount = 1000
lifetime = 12.01
speed_scale = 2.76
randomness = 0.26
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 1000 )
initial_velocity = 330.28
initial_velocity_random = 0.32
angular_velocity = -224.59
angular_velocity_random = 0.07
radial_accel = -1.83
scale_amount = 14.0
scale_amount_random = 0.11
color = Color( 0.137255, 0.0666667, 0.137255, 1 )
hue_variation = 0.04
hue_variation_random = 0.47

[node name="moveTween" type="Tween" parent="." index="8"]

[node name="FXSprite" type="AnimatedSprite" parent="." index="9"]
z_index = 5
frames = SubResource( 4 )
animation = "blankAnim"

[node name="FXSprite2" type="AnimatedSprite" parent="." index="10"]

[node name="ECamera" type="Camera2D" parent="." index="11"]

[node name="Navigation2D" type="Navigation2D" parent="." index="12"]

[node name="testIndicator" type="RichTextLabel" parent="." index="13"]
visible = false
anchor_right = 0.063
anchor_bottom = 0.172
margin_left = -45.0
margin_top = -230.0
margin_right = 399.38
margin_bottom = -176.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 5 )
meta_underlined = false
text = "Hp

"
fit_content_height = true
scroll_active = false

[node name="hpBarGrey" type="Sprite" parent="." index="14"]
modulate = Color( 0.596078, 0.596078, 0.596078, 1 )
show_behind_parent = true
material = SubResource( 10 )
position = Vector2( 0, 167.002 )
scale = Vector2( 1e-05, 1e-05 )
texture = SubResource( 6 )
region_rect = Rect2( 10, 10, 10, 10 )

[node name="hpBar" type="Sprite" parent="." index="15"]
modulate = Color( 1, 0.184314, 0.184314, 1 )
show_behind_parent = true
material = SubResource( 8 )
position = Vector2( 0, 167 )
scale = Vector2( 1e-05, 1e-05 )
texture = SubResource( 6 )
region_rect = Rect2( 10, 10, 10, 10 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="dmg_reaction_timer" to="." method="_on_dmg_reaction_timer_timeout"]
[connection signal="timeout" from="atk_cooldown_timer" to="." method="_on_atk_cooldown_timer_timeout"]
[connection signal="timeout" from="hp_bar_timer" to="." method="_on_hp_bar_timer_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
